Deleted old profile picture

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/in/m-rana-957371210/'"
+                onclick="location.href='https://github.com/'"
               >
                 Github
               </button>
