--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/MSR0401'"
           />
         </div>
       </div>
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree</p>
+              <p>B.Sc. Hons. in Computer Science</p>
             </div>
           </div>
           <div class="text-container">
@@ -315,7 +315,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/MSR0401/StockAlert360.git'"
               >
                 Github
               </button>
@@ -333,7 +333,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/MSR0401/MyPass.git'"
               >
                 Github
               </button>
@@ -347,11 +347,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">QuietRainBot</h2>
+            <h2 class="experience-sub-title project-title">RainGuard</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/MSR0401/RainGuard.git'"
               >
                 Github
               </button>
